--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   </li>
   <li>於2022年6月參加「國立宜蘭大學圖書資訊館2022程式設計暨資訊應用競賽」榮獲入選獎</li>
   <li>於2022年1月參加「教育部補助大專校院STEM領域及女性研發人才培育計畫2022宜蘭大學互動遊戲設計」榮獲傑出女力獎與最佳潛力獎</li>
-  <li>參加新星·耀STEM女性人才交流分享會<
+  <li>參加新星·耀STEM女性人才交流分享會</li>
   <li>擔任班上學藝股長7學期</li>
   <li>擔任管樂社譜務一年、系學會總務一年</li>
 </ol>
