--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
   <li><a href="https://github.com/chizoehsieh/Survival">野外求生</a></li>
   <li><a href="https://github.com/chizoehsieh/CT_image_with_neural_network">肺部CT影像辨識</a></li>
   <li><a href="https://github.com/chizoehsieh/Smart_Contract">智能合約 – 就學貸款繳費系統</a></li>
+  <li><a href="https://github.com/chizoehsieh/Garbage_Truck">垃圾車</a></li>
 </ul>
 
 <h2 id="社團經驗" class="header-level-2">社團經驗</h2>
@@ -164,6 +165,7 @@
       <li>2022年3月檢定結果為「3題」</li>
     </ul>
   </li>
+  <li>通過TQC+ 基礎行動裝置應用程式設計 Android 9 證照考試</li>
   <li>參與第6屆龜山島文學獎「圖文徵獎」徵文榮獲 佳作</li>
 </ul>
 
