--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <h3 id="about-me" class="header-level-3">About Me</h3>
 
-<p>就讀國立宜蘭大學 資訊工程學系 <br>
+<p>就讀國立臺灣科技大學 人工智慧跨域科技研究所，畢業於國立宜蘭大學 資訊工程學系 <br>
 喜歡閱讀、思考，並實作出腦海中出現的新點子。 <br>
 喜歡程式設計，可以透過各種工具，再加上自己的排列組合，創造出屬於自己獨一無二的作品。 <br>
 對前後端都有興趣，喜歡跟同學討論專案，吸取不同架構程式的方法，讓自己能有更多元的創造力。</p>
@@ -96,9 +96,10 @@
   </li>
   <li>於2022年6月參加「國立宜蘭大學圖書資訊館2022程式設計暨資訊應用競賽」榮獲入選獎</li>
   <li>於2022年1月參加「教育部補助大專校院STEM領域及女性研發人才培育計畫2022宜蘭大學互動遊戲設計」榮獲傑出女力獎與最佳潛力獎</li>
-  <li>參加新星·耀STEM女性人才交流分享會</li>
+  <li>於2023年參加「google數位人才探索計畫」，完成<a href='google cloud證書.png'>google cloud</a>與<a href='GA4證書.png'>google Analytics</a>課程</li>
+<!--   <li>參加新星·耀STEM女性人才交流分享會</li>
   <li>擔任班上學藝股長7學期</li>
-  <li>擔任管樂社譜務一年、系學會總務一年</li>
+  <li>擔任管樂社譜務一年、系學會總務一年</li> -->
 </ol>
 
 <h1 id="經歷列表" class="header-level-1">經歷列表</h1>
