--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   </li>
   <li>於2022年6月參加「國立宜蘭大學圖書資訊館2022程式設計暨資訊應用競賽」榮獲入選獎</li>
   <li>於2022年1月參加「教育部補助大專校院STEM領域及女性研發人才培育計畫2022宜蘭大學互動遊戲設計」榮獲傑出女力獎與最佳潛力獎</li>
-  <li>於2023年參加「google數位人才探索計畫」，完成<a href='google cloud證書.png'>google cloud</a>與<a href='GA4證書.png'>google Analytics</a>課程</li>
+  <li>於2023年參加「google數位人才探索計畫」，完成<a href='https://github.com/chizoehsieh/certificates/blob/1b9c5ced89a8433201b32779a898400e53ab0cb2/google%20cloud%E8%AD%89%E6%9B%B8.png'>google cloud</a>與<a href='https://github.com/chizoehsieh/certificates/blob/1b9c5ced89a8433201b32779a898400e53ab0cb2/GA4%E8%AD%89%E6%9B%B8.png'>google Analytics</a>課程</li>
 <!--   <li>參加新星·耀STEM女性人才交流分享會</li>
   <li>擔任班上學藝股長7學期</li>
   <li>擔任管樂社譜務一年、系學會總務一年</li> -->
